styled shopping cart modal

--- a/fiverr/shoppingcart-modal/wwwroot/index.html
+++ b/fiverr/shoppingcart-modal/wwwroot/index.html
@@ -104,75 +104,37 @@
 
                                             <table class="Cart-Items pad" >
                                                 <tr>
-                                                  <th><h3>Productos</h3></th>
-                                                  <th><h3>Cantidad</h3></th>
-                                                  <th><h3>Total</h3></th>
+                                                  <th><h3><strong>Imagen</strong></h3></th>
+                                                  <th><h3><strong>Productos</strong></h3></th>
+                                                  <th><h3><strong>Cantidad</strong></h3></th>
+                                                  <th><h3><strong>Total</strong></h3></th>
+                                                  <th></th>
                                                 </tr>
 
                                                 <tr>
-                                                  <td><h2 class="title">Apple Juice</h2></td>
+                                                    <th><img src="https://placehold.jp/100x100.png"></th>
+                                                  <td><h4 class="title">Apple Juice</h4></td>
                                                   <td><div class="counter">
+                                                      <div class="btn">-</div>
                                                       <div class="count" >1</div>
                                                       <div class="btn">+</div>
-                                                      <div class="btn">-</div>
                                                   </div></td>
                                                   <td><div class="amount">$6.18</div></td>
+                                                  <th><span class="btn red">&times;</span></th>
                                                 </tr>
 
                                                 <tr>
-                                                  <td><h2 class="title">Grapes Juice</h2></td>
+                                                    <th><img src="https://placehold.jp/100x100.png"></th>
+                                                  <td><h4 class="title">Grape Juice</h4></td>
                                                   <td><div class="counter">
+                                                      <div class="btn">-</div>
                                                       <div class="count" >1</div>
                                                       <div class="btn">+</div>
-                                                      <div class="btn">-</div>
                                                   </div></td>
                                                   <td><div class="amount">$6.18</div></td>
+                                                  <th><span class="btn red">&times;</span></th>
                                                 </tr>
-                                                <tr>
-                                                  <td><h2 class="title">Grapes Juice</h2></td>
-                                                  <td><div class="counter">
-                                                      <div class="count" >1</div>
-                                                      <div class="btn">+</div>
-                                                      <div class="btn">-</div>
-                                                  </div></td>
-                                                  <td><div class="amount">$6.18</div></td>
-                                                </tr>
-                                                <tr>
-                                                  <td><h2 class="title">Grapes Juice</h2></td>
-                                                  <td><div class="counter">
-                                                      <div class="count" >1</div>
-                                                      <div class="btn">+</div>
-                                                      <div class="btn">-</div>
-                                                  </div></td>
-                                                  <td><div class="amount">$6.18</div></td>
-                                                </tr>
-                                                <tr>
-                                                  <td><h2 class="title">Grapes Juice</h2></td>
-                                                  <td><div class="counter">
-                                                      <div class="count" >1</div>
-                                                      <div class="btn">+</div>
-                                                      <div class="btn">-</div>
-                                                  </div></td>
-                                                  <td><div class="amount">$6.18</div></td>
-                                                </tr>
-                                                <tr>
-                                                  <td><h2 class="title">Grapes Juice</h2></td>
-                                                  <td><div class="counter">
-                                                      <div class="count" >1</div>
-                                                      <div class="btn">+</div>
-                                                      <div class="btn">-</div>
-                                                  </div></td>
-                                                  <td><div class="amount">$6.18</div></td>
-                                                </tr>
-                                                <tr>
-                                                  <td><h2 class="title">Grapes Juice</h2></td>
-                                                  <td><div class="counter">
-                                                      <div class="count" >1</div>
-                                                      <div class="btn">+</div>
-                                                      <div class="btn">-</div>
-                                                  </div></td>
-                                                  <td><div class="amount">$6.18</div></td>
-                                                </tr>
+                                                
 
                                               </table>
                                           </div>
