left side rounded panel

--- a/fiverr/css-rounded-corners/index.html
+++ b/fiverr/css-rounded-corners/index.html
@@ -10,14 +10,22 @@
 
         <style>
             div {
-                border-radius: 35px;
                 background-color: blue;
-                width: 500px;
-                height: 500px;
+                /* width: 400px; */
+                /* height: 700px; */
+                width: 55vh;
+                height: 100vh;
+
+                float: right;
+                border-top-left-radius: 50% 60%;
+                border-bottom-left-radius: 50% 60%;
             }
+
         </style>
     </head>
     <body>
-        <div></div>
+        <div >
+        </div>
+
     </body>
 </html>
