crossword navigate with arrow keys

--- a/fiverr/crossword/index.html
+++ b/fiverr/crossword/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src="/jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>All The Nines</title>
 </head>
 
 <body>
     <div id="title"> All The Nines </div>
-    <div id="crossword" class="crossword-board">
-    </div>
+    <table id="crossword" class="crossword-board">
+    </table>
     <div id="allClues">
         <div id="acrossClues">
-            <p>across</p>
+            <p>ACROSS</p>
         </div>
         <div id="downClues"> 
-            <p>down</p>
+            <p>DOWN</p>
         </div>
     </div>
     <script src="script.js"></script>
