responsive html elements

--- a/fiverr/cod/infobox.html
+++ b/fiverr/cod/infobox.html
@@ -208,7 +208,8 @@
 
 <body>
 
-    <div id="gp-hub-details" style="height: 300px; width: 720px">
+    <!-- <div id="gp-hub-details" style="height: 300px; width: 720px"> -->
+    <div id="gp-hub-details"  >
         <div class="gp-hub-block gp-hub-block-one">
             <div class="gp-entry-title">Call Of Duty: Ghosts</div>
         </div>
