bartyrz adding review filds img count and serial number

--- a/fiverr/Bartyrz/index.html
+++ b/fiverr/Bartyrz/index.html
@@ -147,6 +147,7 @@
                             <form id="surveyForm" style="display: flex; flex-direction: column;">
                                 <!-- <h1>content provider [comingFromWebsite]</h1> -->
 
+                                <button onclick="updateCollectionCount()">collection counter</button>
                                 <div>
                                     <label>Content Provider: </label>
                                     <input id="contentProvider" label="contentProvider" type="text" placeholder="" style="width: 87%;margin-left: 5px;">
