smaller content size and 2x2 grid

--- a/fiverr/pixel-only/file/new-items.html
+++ b/fiverr/pixel-only/file/new-items.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div id="logo">
-            <a href="./index.html"> <h1>Luna Beauty</h1> </a>
+            <a href="./index.html"> <img src="./images/transparent logo.png"> </a>
         </div>
         
         <nav>
