flashcard study logic

--- a/fiverr/flashcard-study/index.html
+++ b/fiverr/flashcard-study/index.html
@@ -16,9 +16,21 @@
 
     <div class="container">
         <div class="display-area">
-            <div id="display-meaning"></div>
-            <div id="display-phrase"></div>
-            <div id="display-script"></div>
+
+            <div class="display">
+                <div id="display-meaning"></div>
+                <p id="meaning-text"></p>
+            </div>
+
+            <div class="display">
+                <div id="display-phrase"></div>
+                <p id="phrase-text"></p>
+            </div>
+
+            <div class="display">
+                <div id="display-script"></div>
+                <p id="script-text"></p>
+            </div>
         </div>
 
         <div class="paste-area">
