random index, multi word phrase regex match quote, revert design, new imgs

--- a/fiverr/flashcard-study/index.html
+++ b/fiverr/flashcard-study/index.html
@@ -11,38 +11,35 @@
 <body>
     
     <div class="button-container">
-        <button disabled>START LEARNING</button>
+        <button disabled>Start Learning</button>
     </div>
 
     <div class="container">
         <div class="display-area">
 
             <div class="display">
-                <div id="display-meaning"></div>
                 <p id="meaning-text"></p>
             </div>
 
             <div class="display">
-                <div id="display-phrase"></div>
                 <p id="phrase-text"></p>
             </div>
 
             <div class="display">
-                <div id="display-script"></div>
                 <p id="script-text"></p>
             </div>
         </div>
 
         <div class="paste-area">
             <div id="meaning">
-                <label for="paste-meaning">MEANING</label>
+                <label for="paste-meaning">Meaning</label>
                 <textarea type="text" id="paste-meaning"></textarea>
             </div>
             <div id="phrase">
-                <label for="paste-phrase">PHRASE</label>
+                <label for="paste-phrase">Phrase</label>
                 <textarea type="text" id="paste-phrase"></textarea>            </div>
             <div id="script">
-                <label for="paste-script">SCRIPT</label>
+                <label for="paste-script">Script</label>
                 <textarea type="text" id="paste-script"></textarea>            </div>
 
 
