--- a/fiverr/SAT-math-questions/index.html
+++ b/fiverr/SAT-math-questions/index.html
@@ -123,6 +123,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="main.js"></script>
+    <script src="logic.js"></script>
     <!-- <script type="module" src="second.js"></script> -->
 
 </body>
