updated canvas styles, no js allowed cant edit iframe

--- a/fiverr/canvas-welcome/index.html
+++ b/fiverr/canvas-welcome/index.html
@@ -129,6 +129,14 @@
         </div>
     </section>
 
+    <script>
+        window.onload = function() {
+            let myiFrame = document.getElementById("-----VIMEO URL REPLACE NUMBERS ONLY-----");
+            let doc = myiFrame.contentDocument;
+            doc.body.innerHTML = doc.body.innerHTML + '<style>.player .vp-video-wrapper{ border-radius: 10px; }  </style>'; }
+
+    </script>
+
 </body>
 
 </html>
