file name cahnges hike>moon

--- a/fiverr/moon-phase-api/moon.html
+++ b/fiverr/moon-phase-api/moon.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="">
     </head>
     <style>
-        #moonCalendar{    
+        #moonCalendar{
             max-width: 700px;
             margin:20px auto;
             background-color: #333333;
@@ -28,7 +28,7 @@
             .dayCard,.nameDay,.titleCalendar,.buttonCalendar{
             width: calc(100% / 7);
             display:inline-block;
-            vertical-align: top;  
+            vertical-align: top;
             }
             .titleCalendar{
             width: calc(100% / 7 * 5);
@@ -55,15 +55,15 @@
             .dayCard{
             text-align: left!important;
             font-size: 14px;
-            background-image: linear-gradient(black, #222222); 
+            background-image: linear-gradient(black, #222222);
             background-size: 97% 97%;
             background-position: center center;
             background-repeat: no-repeat;
-            }    
+            }
 
             .dayCard>div{
             margin:1px;
-            padding:5%;    
+            padding:5%;
             background-repeat: no-repeat;
             background-size: 25%;
             background-position: 95% 95%;
@@ -75,7 +75,7 @@
             text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
             }
             .dayCard>div>div{
-            padding:5% 15%;   
+            padding:5% 15%;
             }
     </style>
     <body>
@@ -84,7 +84,7 @@
         <![endif]-->
         <!-- <div class="TrailforksWidgetMap" data-w="800px" data-h="400px" data-rid="50718" data-activitytype="6" data-maptype="trailforks" data-trailstyle="difficulty" data-controls="1" data-list="0" data-dml="1" data-layers="labels,poi,polygon,directory,region" data-z="" data-lat="" data-lon="" data-hideunsanctioned="0"></div> -->
         <!-- <div class="container" width="500px" height="500px"></div>
-        
+
         <a href="https://www.trailforks.com/region/mount-pilchuck-state-park-50718/">Mount Pilchuck State Park</a> on <a href="https://www.trailforks.com/">Trailforks.com</a>
 
         <script type="text/javascript">
@@ -92,6 +92,6 @@
         </script> -->
         <div id="moonCalendar"></div>
 
-        <script src="./hike.js" async defer></script>
+        <script src="./moon.js" async defer></script>
     </body>
 </html>
