tts proj read multiple sets in a group

--- a/fiverr/javascript/flashcard-tts-study/index.html
+++ b/fiverr/javascript/flashcard-tts-study/index.html
@@ -35,6 +35,7 @@
             <select style="margin-top: 10px; padding: 5px 0px" id="voices" class="form-select bg-secondary text-light"></select>
             
             <button id="listen" style="height: 4vh; margin-top: 10px; border-radius: 10px;">Toggle</button>
+            <input type="text" name="str-count" id="str-count" placeholder="3">
 
         </div>
  
