--- a/fiverr/javascript/flashcard-tts-study/index.html
+++ b/fiverr/javascript/flashcard-tts-study/index.html
@@ -28,14 +28,17 @@
                 <div class="range-wrap2" style="width: 49%;">
                     <input type="range" class="range2" name="slider2" id="slider2" value="1.0" min="0.2" max="1.5" step="0.1" oninput="speedSlider()">
                     <output class="bubble2"></output>
-                    <label style="padding: 0;" for="slider2">Speed</label>
+                    <label style="padding: 0;" for="slider2">Script Speed</label>
                 </div>
             </div>
             
             <select style="margin-top: 10px; padding: 5px 0px" id="voices" class="form-select bg-secondary text-light"></select>
             
-            <button id="listen" style="height: 4vh; margin-top: 10px; border-radius: 10px;">Toggle</button>
-            <input type="text" name="str-count" id="str-count" placeholder="3">
+            <div>
+                <button id="listen" style="height: 4vh; margin-top: 10px; border-radius: 10px;">Toggle Order</button>
+                <input type="text" name="str-count" id="str-count" placeholder="3">
+                <label for="str-count" style="padding: 0;">Sets to Read</label>
+            </div>
 
         </div>
  
