css still life - mug stack

--- a/fiverr/html-css/css-still-life/index.html
+++ b/fiverr/html-css/css-still-life/index.html
@@ -22,16 +22,22 @@
         </div>
 
         <div class="mug-stack">
-            <div id="stripped-mug1"></div>
-            <div id="stripped-mug2"></div>
+            <div id="stripped-mug">
+                <div id="mug-flag"> <p>&#9733;</p> </div>
+                <!-- <div id="star-five"></div> -->
+            </div>
+            <div id="stripped-mug">
+                <div id="mug-flag"> <p>&#9733;</p> </div>
+                <!-- <div id="star-five"></div> -->
+            </div>
         </div>
 
 
         <div id="coffe-jar"></div>
         <div id="stripped-mug3"></div>
     
-        <p>Cafe Bustelo</p>
-        <p>Espresso Ground Coffee</p>
+        <!-- <p>Cafe Bustelo</p> -->
+        <!-- <p>Espresso Ground Coffee</p> -->
         
     </section>
 </body>
